src/objects/Private_Message_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Message__c</fullName>
        <label>Private Message</label>
        <referenceTo>Private_Message__c</referenceTo>
        <relationshipLabel>Private Message Comments</relationshipLabel>
        <relationshipName>Private_Message_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Private_Message_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Private Message Comment</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Private_Message_Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Private Message Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>